<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AI Canteen</string>
    <string name="eleme_json">
        "[{\"header\":\"Entrees\",\"isHeader\":true},{\"isHeader\":false,\"info\":{\"content\":\"北京牛肉\",\"group\":\"Entrees\",\"imgUrl\":\"https://raw.githubusercontent.com/BattleforAzeroth/AICanteen/master/images/food_0.jpg\",\"title\":\"Beijing Beef\",\"cost\":\"$4.90\"}},{\"isHeader\":false,\"info\":{\"content\":\"黑胡椒安格斯牛排\",\"group\":\"Entrees\",\"imgUrl\":\"https://raw.githubusercontent.com/BattleforAzeroth/AICanteen/master/images/food_1.jpg\",\"title\":\"Black Pepper Angus Steak\",\"cost\":\"$6.15\"}},{\"isHeader\":false,\"info\":{\"content\":\"西兰花炒牛肉\",\"group\":\"Entrees\",\"imgUrl\":\"https://raw.githubusercontent.com/BattleforAzeroth/AICanteen/master/images/food_2.jpg\",\"title\":\"Broccoli Beef\",\"cost\":\"$4.90\"}},{\"isHeader\":false,\"info\":{\"content\":\"茄子豆腐\",\"group\":\"Entrees\",\"imgUrl\":\"https://raw.githubusercontent.com/BattleforAzeroth/AICanteen/master/images/food_6.jpg\",\"title\":\"Eggplant Tofu\",\"cost\":\"$4.90\"}},{\"isHeader\":false,\"info\":{\"content\":\"照烧鸡肉\",\"group\":\"Entrees\",\"imgUrl\":\"https://raw.githubusercontent.com/BattleforAzeroth/AICanteen/master/images/food_9.jpg\",\"title\":\"Grilled Teriyaki Chicken\",\"cost\":\"$4.90\"}},{\"isHeader\":false,\"info\":{\"content\":\"蜂蜜芝麻鸡胸肉\",\"group\":\"Entrees\",\"imgUrl\":\"https://raw.githubusercontent.com/BattleforAzeroth/AICanteen/master/images/food_10.jpg\",\"title\":\"Honey Sesame Chicken Breast\",\"cost\":\"$4.90\"}},{\"isHeader\":false,\"info\":{\"content\":\"蜂蜜核桃虾\",\"group\":\"Entrees\",\"imgUrl\":\"https://raw.githubusercontent.com/BattleforAzeroth/AICanteen/master/images/food_11.jpg\",\"title\":\"Honey Walnut Shrimp\",\"cost\":\"$6.15\"}},{\"isHeader\":false,\"info\":{\"content\":\"宫保鸡丁\",\"group\":\"Entrees\",\"imgUrl\":\"https://raw.githubusercontent.com/BattleforAzeroth/AICanteen/master/images/food_12.jpg\",\"title\":\"Kung Pao Chicken\",\"cost\":\"$4.90\"}},{\"isHeader\":false,\"info\":{\"content\":\"小鸡炖蘑菇\",\"group\":\"Entrees\",\"imgUrl\":\"https://raw.githubusercontent.com/BattleforAzeroth/AICanteen/master/images/food_13.jpg\",\"title\":\"Mushroom Chicken\",\"cost\":\"$4.90\"}},{\"isHeader\":false,\"info\":{\"content\":\"四季豆炒鸡胸肉\",\"group\":\"Entrees\",\"imgUrl\":\"https://raw.githubusercontent.com/BattleforAzeroth/AICanteen/master/images/food_14.jpg\",\"title\":\"String Bean Chicken Breast\",\"cost\":\"$4.90\"}},{\"isHeader\":false,\"info\":{\"content\":\"甜烧鸡胸\",\"group\":\"Entrees\",\"imgUrl\":\"https://raw.githubusercontent.com/BattleforAzeroth/AICanteen/master/images/food_16.jpg\",\"title\":\"SweetFire Chicken Breast\",\"cost\":\"$4.90\"}},{\"isHeader\":false,\"info\":{\"content\":\"陈皮鸡\",\"group\":\"Entrees\",\"imgUrl\":\"https://raw.githubusercontent.com/BattleforAzeroth/AICanteen/master/images/food_17.jpg\",\"title\":\"The Original Orange Chicken\",\"cost\":\"$4.90\"}},{\"isHeader\":false,\"info\":{\"content\":\"清炒虾仁\",\"group\":\"Entrees\",\"imgUrl\":\"https://raw.githubusercontent.com/BattleforAzeroth/AICanteen/master/images/food_20.jpg\",\"title\":\"Wok-Fried Shrimp\",\"cost\":\"$6.15\"}},{\"header\":\"Sides\",\"isHeader\":true},{\"isHeader\":false,\"info\":{\"content\":\"炒面\",\"group\":\"Sides\",\"imgUrl\":\"https://raw.githubusercontent.com/BattleforAzeroth/AICanteen/master/images/food_3.jpg\",\"title\":\"Chow Mein\",\"cost\":\"$4.40\"}},{\"isHeader\":false,\"info\":{\"content\":\"炒饭\",\"group\":\"Sides\",\"imgUrl\":\"https://raw.githubusercontent.com/BattleforAzeroth/AICanteen/master/images/food_8.jpg\",\"title\":\"Fried Rice\",\"cost\":\"$4.40\"}},{\"isHeader\":false,\"info\":{\"content\":\"“超级”蔬菜\",\"group\":\"Sides\",\"imgUrl\":\"https://raw.githubusercontent.com/BattleforAzeroth/AICanteen/master/images/food_15.jpg\",\"title\":\"Super Greens\",\"cost\":\"$4.40\"}},{\"isHeader\":false,\"info\":{\"content\":\"米饭\",\"group\":\"Sides\",\"imgUrl\":\"https://raw.githubusercontent.com/BattleforAzeroth/AICanteen/master/images/food_19.jpg\",\"title\":\"White Steamed Rice\",\"cost\":\"$4.40\"}},{\"header\":\"Appetizers\",\"isHeader\":true},{\"isHeader\":false,\"info\":{\"content\":\"酥脆乳酪蟹角\",\"group\":\"Appetizers\",\"imgUrl\":\"https://raw.githubusercontent.com/BattleforAzeroth/AICanteen/master/images/food_4.jpg\",\"title\":\"Cream Cheese Rangoon\",\"cost\":\"$2.00\"}},{\"isHeader\":false,\"info\":{\"content\":\"蛋卷\",\"group\":\"Appetizers\",\"imgUrl\":\"https://raw.githubusercontent.com/BattleforAzeroth/AICanteen/master/images/food_5.jpg\",\"title\":\"Egg Roll\",\"cost\":\"$2.00\"}},{\"isHeader\":false,\"info\":{\"content\":\"锅贴\",\"group\":\"Appetizers\",\"imgUrl\":\"https://raw.githubusercontent.com/BattleforAzeroth/AICanteen/master/images/food_7.jpg\",\"title\":\"Fried Dumpling\",\"cost\":\"$2.00\"}},{\"isHeader\":false,\"info\":{\"content\":\"素春卷\",\"group\":\"Appetizers\",\"imgUrl\":\"https://raw.githubusercontent.com/BattleforAzeroth/AICanteen/master/images/food_18.jpg\",\"title\":\"Veggie Spring Roll\",\"cost\":\"$2.00\"}}]"
    </string>
    <string name="hint_cola">cola</string>
    <string name="hint_price">¥18.8</string>
    <string name="hint_good_detail">好吃的食物，增肥神器，有求必应</string>
    <string name="switch_camera">Switch</string>
    <string name="switch_menu">Next</string>
    <string name="hint_model">model:</string>
    <string name="back">Back</string>
    <string name="total">Total: $ 0.00</string>
    <string name="checkout">Checkout</string>
</resources>
