<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin8"
        android:text="@string/back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.kunminx.linkage.LinkageRecyclerView
        android:id="@+id/linkage"
        android:layout_width="match_parent"
        android:layout_height="700dp"
        app:layout_constraintTop_toBottomOf="@id/buttonCancel"
        app:layout_constraintLeft_toLeftOf="parent" >

    </com.kunminx.linkage.LinkageRecyclerView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/margin8"
        android:layout_marginRight="@dimen/margin8"
        android:layout_marginBottom="@dimen/margin8"
        app:srcCompat="@drawable/round_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/checkout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="280dp"
        android:layout_marginEnd="@dimen/margin8"
        app:srcCompat="@drawable/checkout"
        app:layout_constraintBottom_toBottomOf="@id/imageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="14dp"
        android:text="@string/total"

        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textCheckout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="14dp"
        android:text="@string/checkout"

        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>